<resources>
    <string name="app_name">Diploma</string>
    <string name="user">Користувачі</string>
    <string name="group">Групи</string>
    <string name="students">Результати</string>
    <string name="tests">Тести</string>
    <string name="create_test">Створити тест</string>
    <string name="show_exercises">Переглянути завдання</string>
    <string name="create">Create</string>
    <string name="group_name">Group name</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="rePassword">Re-Password</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="role">Role</string>
    <string name="register">Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>